# nice

./: .gitignore  .svlint.toml  .svls.toml  .verible.rules  Bender.yml  CNAME  Dockerfile  Makefile  nice.code-workspace  nice_pkg.core  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
distrib/docs/: index.html
distrib/docs/files/: nice_defines-svh-Summary.js  nice_defines-svh-SummaryToolTips.js  nice_defines-svh.html  nice_pkg-sv-Summary.js  nice_pkg-sv-SummaryToolTips.js  nice_pkg-sv.html
distrib/docs/files/collections/: nice_collections-svh-Summary.js  nice_collections-svh-SummaryToolTips.js  nice_collections-svh-ToolTips.js  nice_collections-svh.html  nice_deque-svh-Summary.js  (+10 more)
distrib/docs/menu/: classes.js  files.js  packages.js  tabs.js
distrib/docs/other/: home.html
distrib/docs/search/: index.js
docs/: CNAME
ref/: Dockerfile  Makefile.help  verible-verilog-format-help.txt
ref/ndconfig/: PKG_Comments.txt  PKG_Languages.txt  PKG_Project.txt  PKG_Topics.txt
ref/ndconfig-macOS/: PKG_Comments.txt  PKG_Topics.txt
scripts/: build-docs-macOS.sh  build_docs_docker.sh  docker_make_docs.sh  run_sv_naturaldocs.sh  vcs-argfile.sh  verible-flist.sh  verible-lsp.sh
sim/: flist.f  run.py  run_verilator.sh  sim_args.icarus
src/: nice_defines.svh  nice_pkg.sv
src/collections/: nice_buffer.svh  nice_collections.svh  nice_deque.svh  nice_sequential_iterator.svh  nice_set.svh
src/collections/api/: nice_annotations.svh  nice_collection.svh  nice_sequential_collection.svh  nice_unordered_collection.svh  nice_unordered_set.svh
src/components/: nice_components.svh  nice_components_broadcaster.svh
src/io/: nice_io.svh  nice_io_cmdline_arg.svh  nice_io_file.svh  nice_io_file_reader.svh  nice_io_types.svh
src/io/api/: nice_stream.svh
src/misc/: nice_misc.svh  nice_uid_object.svh
src/patterns/: nice_patterns.svh  nice_patterns_typedefs.svh
src/patterns/api/: nice_composition.svh  nice_iterable.svh  nice_iterator.svh
src/patterns/composite/: nice_patterns_composition_leaf_adapter.svh  nice_patterns_composition_node_adapter.svh
src/patterns/iterators/: nice_composition_iterator.svh  nice_enum_iterator.svh
src/patterns/proxies/: nice_singleton_proxy.svh
src/seq/: nice_chained_sequencer.svh  nice_chaining_sequence.svh  nice_seq.svh
src/sv/nice_pkg/: nice_pkg.sv
src/sv/nice_top/: nice_top.sv
(+308 files in other folders)
