[project]
version = "0.0.1"
name = "nice"
readme = "README.md"
authors = [ {name = "Sagi Kimhi", email = "sagi.kim5@gmail.com"} ]
maintainers = [{name = "Sagi Kimhi", email = "sagi.kim5@gmail.com"}]
description = """nice"""
dependencies = ["cocotb[bus]", "pyuvm", "pytest"]
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python "]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[project.optional-dependencies]
dev = ["mypy", "black", "flake8", "ruff", "pytest-cov"]

[tool.black]
line-length = 79
include = 'python/src'
target-version = ["py313"]
extend-exclude = '''(
    .*/__pycache__/.*
    | .venv
    | .*/.*.egg-info
)'''

[tool.mypy]
pretty = true
strict = true
color_output = true
show_error_codes = true
warn_unreachable = true
python_version = "3.13"
files = ["python/src"]

