# ------------------------------------------------------------------------------
# Project Configurations
# ------------------------------------------------------------------------------

[project]
name = "nice"
version = "0.1.0"
readme = "README.md"
authors = [ { name = "Sagi Kimhi", email = "sagi.kim5@gmail.com" } ]
maintainers = [ { name = "Sagi Kimhi", email = "sagi.kim5@gmail.com" } ]
description = ""
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pyupgrade",
    "pydocstyle",
    "pycodestyle",
    "flake8-bugbear",
    "flake8-simplify",
]

# ------------------------------------------------------------------------------
# Build System Configurations
# ------------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/nice"]


# ------------------------------------------------------------------------------
# Developer Configurations
# ------------------------------------------------------------------------------

[tool.uv]
package = true

[tool.mypy]
files = [ "src/python" ]
python_version = "3.12"
pretty = true
strict = true
color_output = true
show_error_codes = true
warn_unreachable = true

